Fixed flex-wrap

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -47,3 +47,7 @@
 .slider-control-centerright {
   display: none;
 } */
+
+body {
+  overflow-x: hidden;
+}
